All: Enable Typesense in prod and fix appearance on sites without it
E.g.:

- https://blog.jquery.com/
- https://learn.jquery.com/
- https://jquery.org/team/

These now use the typesense-minibar HTML appearance but without the
data attributes and JS payload to hydrate them, keeping the same
no-js behaviour as before, based on WordPress search.

Also:

* Remove `input:focus` override to improve accessibility.
  It didn't look very good on the previous design but seems fine
  with typesense-minibar and matches how typesense-minibar is used
  in its own demo.

* Fix order of stylesheets and simplify selectors accordingly.
  Previously I was fighting specificity because our overrides applies
  *before* typesense-minibar.css was applied. This allows various
  selectors to be simplified.

Ref https://github.com/jquery/infrastructure-puppet/issues/33

--- a/themes/jquery.org/style.css
+++ b/themes/jquery.org/style.css
@@ -492,7 +492,7 @@ a.icon-search::before {
 
 /*Adjust widths for longer navigation*/
 
-nav#main .searchform {
+.searchform {
 	width: 20%;
 }
 
@@ -502,30 +502,6 @@ nav#main ul {
 
 .content-full.full-width #content {
 	padding-bottom: 15px;
-}
-
-@media only screen and (max-width: 767px) {
-	.sponsors-page ul.block-grid li img {
-		float: none;
-		width: 80%;
-		max-width: 80%;
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 20px;
-		margin-top: 0;
-	}
-
-	.sponsors-page ul.block-grid li p {
-		float: none;
-		width: 100%;
-		text-align: center;
-	}
-
-	nav#main .searchform,
-	nav#main ul {
-		width: 100%;
-	}
 }
 
 
